# vacancy-intelligence-ai

./: .env.example  .gitignore  Makefile  pyproject.toml
alembic/: env.py
alembic/versions/: 2440a194d66a_create_quality_tables.py  2e3d4fd10f05_create_text_features_table.py  3665b3d2d010_remove_timezone_aware_from_datetime_.py  3d04ec53c985_create_validation_tables.py  3fee09f2292a_create_analytics_runs_table.py  55c0b3b1f058_create_salary_features_table.py  648628f9cbe5_create_feature_runs_table.py  6e86abc8cd7e_create_categorical_features_table.py  776649bb9c85_create_client_summaries_table.py  8301b3a74088_create_market_summaries_table.py  9de11c13e241_create_ingestion_tables.py  a4f2c1d9e8b7_create_ml_training_runs_table.py  b1164fc9acb6_create_vacancy_snapshots_table.py  b12cf01c5609_create_competitor_summaries_table.py  bd72bfa9f95c_create_time_features_table.py  c18fb53b8693_create_publication_activity_features_.py  d7439a6e4c31_create_ml_dataset_tables.py  e27217ff30b5_init.py  e5df279c2345_create_clients_table.py
app/api/: exception_handlers.py  main.py
app/core/: exceptions.py
app/db/: base.py  config.py  models_registry.py  session.py
dev_notes/: Pipeline_1.md  Pipeline_2_Analytics_Summary.md  Pipeline_2_Categorical_Features.md  Pipeline_2_Full_Run.md  Pipeline_2_ML_Dataset.md  Pipeline_2_Publication_Activity_Features.md  Pipeline_2_Salary_Features.md  Pipeline_2_Text_Features.md  Pipeline_2_Time_Features.md
infra/compose/: docker-compose.postgres.yml
reports/analytics/: analytics_2026-05-02_23-50-41.md
tests/: conftest.py
(+235 files in other folders)
