[project]
name = 'vacancy-intelligence-ai'
version = '0.1.0'
description = 'Competitive Job Posting Optimizer'
requires-python = '>=3.11'
dependencies = [
    'SQLAlchemy>=2.0.0,<3.0.0',
    'alembic>=1.13.0,<2.0.0',
    'asyncpg>=0.29.0,<1.0.0',
    'psycopg[binary]>=3.1.0,<4.0.0',
    'pandas>=2.1.0,<3.0.0',
    'openpyxl>=3.1.0,<4.0.0',
    'fastapi>=0.115.0,<1.0.0',
    'uvicorn>=0.30.0,<1.0.0',
    'python-multipart>=0.0.9,<1.0.0',
    'pytest>=8.3.0,<9.0.0',
    'pytest-asyncio>=0.24.0,<1.0.0',
    'httpx>=0.28.0,<1.0.0',
]

[tool.setuptools]
package-dir = {'' = '.'}

[tool.setuptools.packages.find]
where = ['.']
include = ['app*']

[tool.pytest.ini_options]
asyncio_mode = 'auto'
asyncio_default_fixture_loop_scope = 'function'
testpaths = ['tests']
